--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "slugify": "^1.6.6",
-    "xxs": "^0.0.1"
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "eslint": "^8",
